--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,73 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgba(243, 229, 255, 0.527);
+}
 
+a {
+  color: rgba(136, 0, 255, 0.984);
+}
+
+h1 {
+  text-align: center;
+  margin-top: 0;
+  color: rgba(45, 0, 85, 0.984);
+}
+
+.container {
+  max-width: 600px;
+  margin: 120px auto;
+  padding: 50px;
+}
+
+form {
+  background-color: white;
+  padding: 30px;
+  border: none;
+  border-radius: 10px;
+  display: flex;
+  margin-bottom: 30px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.input-form {
+  width: 80%;
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 1.5;
+  padding: 10px;
+  border-radius: 24px;
+  border: 1px solid rgba(12, 2, 2, 0.171);
+  color: black;
+}
+
+.submit-button {
+  font-size: 16px;
+  margin-left: 10px;
+  line-height: 1.5;
+  width: 150px;
+  border: none;
+  border-radius: 35px;
+  color: white;
+  background-color: rgba(136, 0, 255, 0.984);
+}
+
+.submit-button:hover {
+  opacity: 0.6;
+  cursor: pointer;
+  transition: all 300ms ease-in-out;
+}
+
+.poem {
+  background-color: white;
+  font-size: 16px;
+  line-height: 2;
+  border-left: 3px solid rgba(136, 0, 255, 0.984);
+  padding: 20px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px;
+}
+
+footer {
+  margin-top: 30px;
+  font-size: 13px;
+  text-align: center;
+}
