--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,9 @@ form {
   padding: 20px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px;
 }
+.poem strong {
+  color: blueviolet;
+}
 
 footer {
   margin-top: 30px;
