--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@ a {
 
 h1 {
   text-align: center;
-  margin-top: 0;
+
   color: rgba(45, 0, 85, 0.984);
 }
 
@@ -20,13 +20,40 @@ h1 {
 }
 
 form {
+  display: flex;
+}
+
+.form-wrapper {
+  background-color: white;
   background-color: white;
   padding: 30px;
   border: none;
   border-radius: 10px;
-  display: flex;
   margin-bottom: 30px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.hint {
+  font-size: 13px;
+  margin-top: 5px;
+  margin-left: 3px;
+  opacity: 0.5;
+}
+
+.blink {
+  animation: blinker 1s infinite;
+}
+
+@keyframes blinker {
+  from {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .input-form {
@@ -67,6 +94,9 @@ form {
 }
 .poem strong {
   color: blueviolet;
+}
+.hidden {
+  display: none;
 }
 
 footer {
